This is the CHANGELOG for amavisd-milter.

20130125:
	Included amavisd-milter.spec for compilation with rpmbuild.

	Thanks to: Jo Rhett <jrhett@netconsonance.com>

20120727:
	Include stdbool.h before libmilter/mfapi.h in compat/compat.h because
	libmilter/mfapi.h not define true and false.

20101105:
	Fixed typo in aclocal/ax_path_milter.m4 which prevents using LDFLAGS
	on Debian.

        Thanks to: Harald Jenny <harald@a-little-linux-box.at>

20100502:
	amavisd-milter-1.5.0:

	Bug and compatibility fixies:
	- Amavisd-new 2.7.0 introduce new AM.PDP response log_id.

20100501:
	Amavisd-new 2.7.0 introduce new AM.PDP response log_id.

	Thanks to: Andreas Schulze <andreas.schulze@datev.de>

20100131:
	amavisd-milter-1.4.1:

	New features:
	-  Added new amavisd-milter option -P which causes that mails pass
	   through when amavisd-new fails.

	Bug and compatibility fixies:
	- Debian installs libmilter.a to /usr/lib/libmilter.
	- sendmail 8.14 introduces three new libmilter callbacks.

20091029:
	amavisd-milter(8) manual page has been improved:
	- Added link to milter documentation.
	- Added socket name format description for sendmail and amavisd-new
	  socket.

20091003:
	Added new amavisd-milter option -P which causes that mails pass through
	when amavisd-new fails.

	Thans to: Uli Schellhaas <uli.schellhaas@memware.de>

20090803:
	Bug fix - sendmail 8.14 introduces three new callbacks.

20090601:
	Compatibility fix - Debian installs libmilter.a to /usr/lib/libmilter.

	Thanks to: Simon Hobson <linux@thehobsons.co.uk>

20081205:
	amavisd-milter-1.4.0:

	New features:
	- Added new amavisd-milter option -q which sets milter socket backlog
	  used by listen(2).
	- Local state directory (default /var/amavis) is tunable via configure
	  option:
	  --localstatedir=</DIR>	      - absolute path to local state
	  					directory.
	- Working directory (default local state directory) is tunable via
	  configure option: